--- a/css/mobile.css
+++ b/css/mobile.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: -13.5%;
+    margin-top: -15%;
     margin-left: 0;
     margin-right: 0;
   }
